# tiny-gea3-api

./: CMakeLists.txt  README.md
include/: i_tiny_gea_interface.h  tiny_erd_client.h
src/: tiny_erd_client.c  tiny_gea2_interface.c  tiny_gea3_interface.c
test/include/double/: tiny_erd_client_double.hpp  tiny_gea3_interface_double.hpp
test/src/: tiny_erd_client_double.cpp  tiny_gea3_interface_double.cpp
test/tests/: tiny_erd_client_test.cpp  tiny_gea2_interface_test.cpp  tiny_gea3_interface_test.cpp
